...
            "state" : "translated",
            "value" : "Make it yours"
          }
        }
      }
    },
    "Menu" : {
      "extractionState" : "stale",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "القائمة"
...
            "state" : "translated",
            "value" : "Paywall unavailable"
          }
        }
      }
    },
    "Prayer times" : {
      "comment" : "The title of a section in the settings view that displays prayer times.",
      "isCommentAutoGenerated" : true
    },
    "Quick Mode" : {
      "extractionState" : "stale",
      "localizations" : {
...
            "state" : "translated",
            "value" : "Set reminders"
          }
        }
      }
    },
    "Settings" : {
      "extractionState" : "stale",
      "localizations" : {
        "ar" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الإعدادات"
...
